[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytale"
version = "0.5.6-1"
description = "pyTale Python library for Hytale plugins"
requires-python = ">=3.12,<3.13"
dependencies = ["typing-extensions>=4.15"]

[tool.hatch.build.targets.wheel]
packages = ["pytale"]

[tool.uv.sources]
java-stubs = { workspace = true }
pytale-tools = { workspace = true }

[dependency-groups]
dev = [
    "java-stubs",
    "pytale-tools",
]
