[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytale-tools"
version = "0.0.1"
description = "PyTale development tools for building Python plugins"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28"]

[project.scripts]
pytale-tools = "pytale_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pytale_tools"]
include = [
  "/pytale_tools/resources",
]
